# agentfoxx

./: .env.example  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  README.md  agentfoxxai_fix2_UPDATED.json  conference-db-spec.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  replit.md  tailwind.config.ts
attached_assets/: MRC_Vegas_2026_-_Attendees_1773354912395.numbers  MRC_Vegas_2026_-_Attendees_1773355248214.csv  Pasted--Column-Type-Notes--1771954193263_1771954193263.txt
attached_assets/extracted/agentfoxx-replit/: .env.example  .replit  README.md  n8n_agentfoxx_workflow.json  package.json  server.js
attached_assets/extracted/agentfoxx-replit/client/: index.html
attached_assets/extracted/agentfoxx-replit/client/src/: App.tsx  index.css
attached_assets/extracted/agentfoxx-replit/client/src/components/: Layout.tsx
attached_assets/extracted/agentfoxx-replit/client/src/lib/: mockData.ts
client/: requirements.md
client/public/: source-dump.txt
client/src/: App.tsx  index.css
client/src/components/: app-sidebar.tsx  audio-recorder.tsx  auth-guard.tsx  broadcast-toast.tsx  event-selector.tsx  lead-toast.tsx  theme-provider.tsx
client/src/components/ui/: sidebar.tsx
client/src/contexts/: AuthContext.tsx  EventContext.tsx
client/src/hooks/: use-activities.ts  use-auth.ts  use-reviews.ts
client/src/lib/: queryClient.ts  supabase.ts
client/src/pages/: AdminEvents.tsx  Broadcasts.tsx  Dashboard.tsx  Home.tsx  HowItWorks.tsx  Leaderboard.tsx  Login.tsx  ReviewDetail.tsx  ReviewList.tsx  Settings.tsx
scripts/: embed-collateral.ts
server/: email.ts  pipeline.ts  routes.ts  storage.ts  supabase.ts
shared/: routes.ts  schema.ts
src/telesign_mcp/: __init__.py  __main__.py  client.py  config.py  exceptions.py  logging.py  metrics.py  orchestrator.py  ratelimit.py  sanitize.py  server.py
src/telesign_mcp/models/: __init__.py  intent.py  schemas.py
src/telesign_mcp/tools/: __init__.py  _helpers.py  email.py  intelligence.py  phone_identity.py  verify.py
tests/: conftest.py
tests/integration/: conftest.py  test_end_to_end.py  test_fault_tolerance.py  test_lifespan.py  test_orchestrator_e2e.py
tests/unit/: conftest.py  test_client.py  test_config.py  test_intent.py  test_metrics.py  test_orchestrator.py  test_phase0_smoke.py  test_ratelimit.py  test_schemas.py  test_server.py
tests/unit/tools/: test_email.py  test_helpers.py  test_intelligence.py  test_phone_identity.py  test_verify.py
(+4 files in other folders)
