[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "telesign-mcp-server"
version = "1.0.0"
description = "Production MCP server exposing Telesign Intelligence, Phone ID, Verify, and Email Intelligence APIs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"  # Production target: 3.11+; 3.10 for dev compatibility
authors = [
    { name = "Juan Rivera", email = "jcr1031@gmail.com" },
]
keywords = ["mcp", "telesign", "fraud-detection", "identity-verification"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]

dependencies = [
    "fastmcp>=3.0,<4.0",
    "httpx[http2]>=0.27,<1.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "tenacity>=8.0,<10.0",
    "circuitbreaker>=2.0,<3.0",
    "structlog>=24.0,<26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "black>=24.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.0",
]
observability = [
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-instrumentation-httpx>=0.46b0",
]

[project.scripts]
telesign-mcp = "telesign_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/telesign_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests requiring live Telesign API credentials",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
]
ignore = [
    "UP017",  # datetime.UTC requires Python 3.11+; we support 3.10
    "UP042",  # StrEnum requires Python 3.11+; we support 3.10
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "fastmcp.*",
    "circuitbreaker.*",
]
ignore_missing_imports = true
